--- a/lambda/requirements.txt
+++ b/lambda/requirements.txt
@@ -1,6 +1,6 @@
 boto3==1.9.216
 ask-sdk-core==1.11.0
 ask-sdk-dynamodb-persistence-adapter
-beautifulsoup4
-googlesearch-python
-json
+bs4
+google
+requests==2.25.1
